syntax = 'proto3';

package astria.execution.v2;

import "astria/execution/v2/executed_block_metadata.proto";

// The CommitmentState holds the block at each stage of sequencer commitment
// level
//
// A Valid CommitmentState:
// - Block numbers are such that soft >= firm.
// - No blocks ever decrease in block number.
// - The chain defined by soft is the head of the canonical chain the firm block
//   must belong to.
message CommitmentState {
  // Soft committed block metadata derived directly from an Astria sequencer block.
  ExecutedBlockMetadata soft_executed_block_metadata = 1;
  // Firm committed block metadata derived from a Sequencer block that has been
  // written to the data availability layer (Celestia).
  ExecutedBlockMetadata firm_executed_block_metadata = 2;
  // The lowest Celestia height that will be searched for the next firm block.
  // This information is stored as part of `CommitmentState` so that it will be
  // routinely updated as new firm blocks are received, and so that the execution
  // client will not need to search from Celestia genesis.
  uint64 lowest_celestia_search_height = 3;
}
