syntax = 'proto3';

package astria.execution.v2;

import "google/protobuf/timestamp.proto";

// The set of information which deterministic driver of block production
// must know about a given rollup Block
message ExecutedBlockMetadata {
  // The block number
  uint64 number = 1;
  // The hash of the block, formatted in the execution node's preferred encoding.
  string hash = 2;
  // The hash of this block's parent block, formatted in the execution node's preferred
  // encoding.
  string parent_hash = 3;
  // Timestamp of the block, taken from the sequencer block that this rollup block
  // was constructed from.
  google.protobuf.Timestamp timestamp = 4;
  // The hash of the sequencer block from which this block was derived.
  //
  // Must be 32 byte base16 encoded string. It may be prefixed with `0x`.
  //
  // (Optional) This field will only be utilized if the execution node stores
  // this data in blocks during `ExecuteBlock`.
  string sequencer_block_hash = 5;
}
